# link_shortener

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/2023-11-18-082947_initial/: up.sql
migrations/2023-12-03-163121_prefixes/: down.sql  up.sql
src/: admin.rs  api.rs  auth.rs  config.rs  database.rs  main.rs  schema.rs  utils.rs
static/css/: main.css
static/js/: utils.js
templates/: header.html.hbs  layout.html.hbs  login.html.hbs  shortener.html.hbs
templates/error/: 404.html.hbs  500.html.hbs
