[package]
name = "link_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
password-auth = "1.0.0"
rocket = { version = "=0.5.0-rc.4", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["handlebars"] }
rocket_db_pools = { version = "=0.1.0-rc.4", features = ["diesel_postgres"] }
serde = "1.0.192"
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
validator = { version = "0.16.1", features = ["derive"] }
rand = "0.8.5"
