[package]
name = "link_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
openidconnect = "3.4.0"
password-auth = "1.0.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = "1.0.192"
validator = { version = "0.16.1", features = ["derive"] }
